Change node selector key to latest labels.

--- a/tools/telegraf/telegraf-ds-master.yaml
+++ b/tools/telegraf/telegraf-ds-master.yaml
@@ -92,7 +92,7 @@ spec:
       tolerations:
       - operator: "Exists"
       nodeSelector:
-        kubernetes.io/hostname: master
+        node-role.kubernetes.io/control-plane: ""
       containers:
       - name: telegraf
         image: telegraf:latest
