Create persistent volume directories for logs and traces.

--- a/install-desk/main.yaml
+++ b/install-desk/main.yaml
@@ -40,6 +40,8 @@
         - /opt/loki
         - /opt/prometheus
         - /opt/observability/metrics
+        - /opt/observability/logs
+        - /opt/observability/traces
 
 #    - name: Install kubernetes apply pre-requisites
 #      pip:
