Refactor file name. Use ansible provided variables instead of static variables.

--- a/install-desk/60-install-visualization-services.yaml
+++ b/install-desk/60-install-visualization-services.yaml
@@ -8,7 +8,7 @@
 - name: Install Grafana using Helm
   when: install_grafana
   kubernetes.core.helm:
-    kubeconfig: /home/aida/.kube/config
+    kubeconfig: "{{ kubernetes_config_path }}"
     name: grafana
     chart_ref: grafana/grafana
     release_namespace: observability
