Refactor file name. Use ansible provided variables instead of static variables.

--- a/install-desk/70-install-fusion-services.yaml
+++ b/install-desk/70-install-fusion-services.yaml
@@ -2,6 +2,6 @@
 - name: Deploy Kafka consumers
   when: install_kc_nm
   kubernetes.core.k8s:
-    kubeconfig: /home/aida/.kube/config
+    kubeconfig: "{{ kubernetes_config_path }}"
     state: present
     src: "{{ playbook_dir }}/../tools/kafka-consumers/kc-nm-deployment.yaml"
