--- a/helm-configs/otel-collector-values.yaml
+++ b/helm-configs/otel-collector-values.yaml
@@ -86,7 +86,7 @@ config:
     memory_limiter: null
     tail_sampling:
       decision_wait: 10s
-      num_traces: 100
+      num_traces: 50000
       expected_new_traces_per_sec: 1000
       policies:
         [
@@ -94,7 +94,7 @@ config:
             name: test-policy-1,
             type: latency,
             latency: { threshold_ms: 20 }
-          }
+          },
         ]
   receivers:
     otlp:
@@ -114,6 +114,7 @@ config:
         processors:
           - memory_limiter
           - batch
+          - tail_sampling
         receivers:
           - otlp
 
