Remove jaeger agent deployments because otel is used for the collection.

--- a/helm-configs/jaeger-values.yaml
+++ b/helm-configs/jaeger-values.yaml
@@ -258,7 +258,7 @@ ingester:
 agent:
   podSecurityContext: {}
   securityContext: {}
-  enabled: true
+  enabled: false
   annotations: {}
   image: jaegertracing/jaeger-agent
   # tag: 1.22
