Add a policy to sample 10 percent of total traces as well as all the samples with latency 20ms and greater.

--- a/helm-configs/otel-collector-values.yaml
+++ b/helm-configs/otel-collector-values.yaml
@@ -95,6 +95,11 @@ config:
             type: latency,
             latency: { threshold_ms: 20 }
           },
+          {
+            name: randomized-policy,
+            type: probabilistic,
+            probabilistic: { sampling_percentage: 10 }
+          },
         ]
   receivers:
     otlp:
