--- a/helm-configs/elasticsearch-values.yaml
+++ b/helm-configs/elasticsearch-values.yaml
@@ -59,7 +59,7 @@ envFrom: []
 # Disable it to use your own elastic-credential Secret.
 secret:
   enabled: false
-  password: "" # generated randomly if not defined
+  password: "elasticsearch" # generated randomly if not defined
 
 # A list of secrets and their paths to mount inside the pod
 # This is useful for mounting certificates for security and for mounting
@@ -110,7 +110,7 @@ volumeClaimTemplate:
   accessModes: ["ReadWriteOnce"]
   resources:
     requests:
-      storage: 8Gi
+      storage: 10Gi
 
 rbac:
   create: false
@@ -188,7 +188,7 @@ podManagementPolicy: "Parallel"
 # If you experience slow pod startups you probably want to set this to `false`.
 enableServiceLinks: true
 
-protocol: http
+protocol: https
 httpPort: 9200
 transportPort: 9300
 
