--- a/install-desk/70-install-fusion-services.yaml
+++ b/install-desk/70-install-fusion-services.yaml
@@ -14,14 +14,25 @@
 
 - name: Install Spark using Helm
   when: install_spark
-  kubernetes.core.helm:
-    kubeconfig: "{{ kubernetes_config_path }}"
-    name: spark
-    chart_ref: spark-operator/spark-operator
-    release_namespace: observability
-    values:
-      enableWebhook: true
-      enableMetrics: false
-      nodeSelector.appstype: observability
-      serviceAccounts.spark.name: spark
-      sparkJobNamespace: default
+  shell: |
+    helm upgrade --install spark spark-operator/spark-operator \
+      --namespace observability \
+      --set enableWebhook=true \
+      --set enableMetrics=false \
+      --set nodeSelector.appstype=observability \
+      --set serviceAccounts.spark.name=spark \
+      --set sparkJobNamespace=default \
+
+#- name: Install Spark using Helm
+#  when: install_spark
+#  kubernetes.core.helm:
+#    kubeconfig: "{{ kubernetes_config_path }}"
+#    name: spark
+#    chart_ref: spark-operator/spark-operator
+#    release_namespace: observability
+#    values:
+#      enableWebhook: true
+#      enableMetrics: false
+#      nodeSelector.appstype: observability
+#      serviceAccounts.spark.name: spark
+#      sparkJobNamespace: default
