change data format to json.

--- a/tools/telegraf/telegraf-ds-worker.yaml
+++ b/tools/telegraf/telegraf-ds-worker.yaml
@@ -25,6 +25,7 @@ data:
     [[outputs.kafka]]
       brokers = ["bitnami-kafka-headless.observability.svc.cluster.local:9092"]
       topic = "telegraf"
+      data_format = "json"
       [outputs.kafka.topic_suffix]
         method = "measurement"
         separator = "_"
