--- a/tools/telegraf/telegraf-ds-worker.yaml
+++ b/tools/telegraf/telegraf-ds-worker.yaml
@@ -74,8 +74,13 @@ data:
       url = "https://$HOSTIP:10250"
       bearer_token_string = "$TELEGRAF_TOKEN"
       insecure_skip_verify = true
-      namepass = ["kubernetes_pod_container", "kubernetes_pod_volume", "kubernetes_pod_network"]
-
+      namepass = ["kubernetes_pod_container", "kubernetes_pod_volume", "kubernetes_pod_network"]    
+    [[inputs.docker]]
+      endpoint = "unix:///var/run/docker.sock"
+      perdevice = true
+      total = true
+      perdevice_include = ["cpu", "blkio", "network"]
+      total_include = ["cpu", "blkio", "network"]
 
 #    [[outputs.execd]]
 #      namepass = ["kubernetes_pod_container"]
