--- a/tools/telegraf/telegraf-ds-master.yaml
+++ b/tools/telegraf/telegraf-ds-master.yaml
@@ -72,8 +72,6 @@ data:
      namepass = ["kubernetes_pod_container", "kubernetes_pod_volume", "kubernetes_pod_network"]
    [[inputs.docker]]
      endpoint = "unix:///var/run/docker.sock"
-     perdevice = true
-     total = true
      perdevice_include = ["cpu", "blkio", "network"]
      total_include = ["cpu", "blkio", "network"]
    
@@ -100,6 +98,7 @@ spec:
       - operator: "Exists"
       nodeSelector:
         node-role.kubernetes.io/control-plane: ""
+      hostNetwork: true
       containers:
       - name: telegraf
         image: telegraf:latest
