--- a/tools/telegraf/telegraf-ds-worker.yaml
+++ b/tools/telegraf/telegraf-ds-worker.yaml
@@ -62,7 +62,7 @@ data:
     [[inputs.mem]]
       fieldpass = ["available", "free", "total", "used_percent"]
     [[inputs.net]]
-      interfaces= ["eth*", "ens*"]
+      interfaces= ["eth*", "ens*", "eno*"]
       ignore_protocol_stats= true
     [[inputs.system]]
       fieldpass = ["load1", "load5", "load15"]
